commit translated contents

--- a/docs/code-quality/c28210.md
+++ b/docs/code-quality/c28210.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28210'
 title: C28210
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28210
 ms.assetid: 653ed499-2b51-413b-b510-e3bc842981b4
-ms.openlocfilehash: ccf4dff214c95b75af3c57d095e4dc348e4d3643
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 5ba49a9f31f4bb6e4b0c21835abb9983dbcba40d
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416436"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97190497"
 ---
 # <a name="c28210"></a>C28210
 
-> avviso C28210: le annotazioni per il contesto di `_On_failure_` non devono essere nel contesto preliminare esplicito
+> avviso C28210: le annotazioni per il `_On_failure_` contesto non devono essere nel contesto preliminare esplicito
 
-Le annotazioni `_On_failure_` devono essere indicate in modo esplicito o implicito nel contesto `__post`, ovvero da applicare dopo la restituzione della funzione.  Usare `_drv_out` per verificare questo problema.
+Le annotazioni `_On_failure_` devono essere indicate in modo esplicito o implicito nel `__post` contesto, ovvero da applicare dopo la restituzione della funzione.  Usare `_drv_out` per verificare questa operazione.
