--- a/docs/code-quality/c6274.md
+++ b/docs/code-quality/c6274.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6274'
 title: C6274
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,18 +8,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6274
 ms.assetid: d32f1c67-edf1-4d03-9103-133272631948
-ms.openlocfilehash: 9bd14dd85c2ef27aca2f5b93b6ce7a0b38860b5e
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 8fc0332f3f57d08819b3da87a1862064c7d4deb1
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420265"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97190419"
 ---
 # <a name="c6274"></a>C6274
 
-> avviso C6274: non carattere passato come parametro \<numero > quando il carattere è obbligatorio nella chiamata a \<funzione >
+> avviso C6274: carattere non passato come parametro \<number> quando il carattere è obbligatorio nella chiamata a \<function>
 
-Questo avviso indica che la stringa di formato specifica che è necessario un carattere (ad esempio, un `%c` o una specifica di `%C`) ma che è stato passato un valore non Integer, ad esempio float, String o struct. È probabile che questo errore provochi un output non corretto.
+Questo avviso indica che la stringa di formato specifica che è necessario un carattere (ad esempio, `%c` una `%C` specifica o) ma che viene passato un valore non integer come float, String o struct. È probabile che questo errore provochi un output non corretto.
 
 ## <a name="example"></a>Esempio
 
@@ -50,7 +51,7 @@ void f(char str[])
 }
 ```
 
-Il codice seguente usa la funzione di manipolazione delle stringhe sicura, `sprintf_s`, per correggere il problema:
+Il codice seguente usa la funzione Safe String Manipulation, `sprintf_s` , per correggere l'avviso:
 
 ```cpp
 #include <stdio.h>
