--- a/docs/code-quality/c6276.md
+++ b/docs/code-quality/c6276.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6276'
 title: C6276
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,18 +8,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6276
 ms.assetid: 88f288da-da81-4d32-ab0f-be9d01a2606a
-ms.openlocfilehash: 0293307c83526125636b01f847af08d9d07553c7
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 5b6a8a9eba57df6dcc76901061ab87153506dda8
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420230"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97190380"
 ---
 # <a name="c6276"></a>C6276
 
-> avviso C6276: cast tra tipi di stringa semanticamente diversi: char * per wchar_t\*. L'uso di una stringa non valida può causare un comportamento non definito
+> avviso C6276: cast tra tipi di stringa semanticamente diversi: char * per wchar_t \* . L'uso di una stringa non valida può causare un comportamento non definito
 
-Questo avviso indica un cast potenzialmente errato da una stringa ANSI (`char_t*`) a una stringa UNICODE (`wchar_t *`). Poiché le stringhe UNICODE hanno una dimensione del carattere pari a 2 byte, il cast potrebbe restituire stringhe che non sono terminate correttamente. L'utilizzo di tali stringhe con la libreria WCS * delle funzioni può causare sovraccarichi del buffer e violazioni di accesso.
+Questo avviso indica un cast potenzialmente errato da una stringa ANSI ( `char_t*` ) a una stringa Unicode ( `wchar_t *` ). Poiché le stringhe UNICODE hanno una dimensione del carattere pari a 2 byte, il cast potrebbe restituire stringhe che non sono terminate correttamente. L'utilizzo di tali stringhe con la libreria WCS * delle funzioni può causare sovraccarichi del buffer e violazioni di accesso.
 
 ## <a name="example"></a>Esempio
 
@@ -51,7 +52,7 @@ VOID f()
 }
 ```
 
-Nel codice seguente viene utilizzata la funzione Safe String Manipulation, `wcscpy_s`, per correggere il problema:
+Il codice seguente usa la funzione Safe String Manipulation, `wcscpy_s` , per correggere l'avviso:
 
 ```cpp
 #include <windows.h>
