--- a/docs/code-quality/c28022.md
+++ b/docs/code-quality/c28022.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28022'
 title: C28022
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28022
 ms.assetid: 9cef31e0-54f3-4b56-8c97-abb0ea1b98f7
-ms.openlocfilehash: d52bc6703eeb0ed99bbb33a51d397ff6c6f7ea70
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 2ec9f9c95f2099e4c8f4e14d29b39e2fee173916
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416660"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97318286"
 ---
 # <a name="c28022"></a>C28022
 
-> avviso C28022: le classi di funzione \<classlist1 > in questa funzione non corrispondono alle classi di funzioni \<classlist2 > sul typedef utilizzato per definirlo.
+> avviso C28022: le classi di funzione (es) \<classlist1> in questa funzione non corrispondono alle classi \<classlist2> di funzioni nel typedef utilizzato per definirlo.
 
-Questo avviso viene segnalato quando si verifica un errore nelle annotazioni. Sia il typedef che la funzione sono `_Function_class_` annotazioni, ma non corrispondono. Se vengono usati entrambi, devono corrispondere.
+Questo avviso viene segnalato quando si verifica un errore nelle annotazioni. Sia il typedef che la funzione hanno `_Function_class_` annotazioni, ma non corrispondono. Se vengono usati entrambi, devono corrispondere.
