--- a/docs/code-quality/c28103.md
+++ b/docs/code-quality/c28103.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28103'
 title: C28103
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C28103
 ms.assetid: e39c464d-1049-4ff4-a62b-9cad9d3f6fee
-ms.openlocfilehash: b5e4f82962c1015f371ee7fe9b9025d13c04d39d
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: f0d9cb64c9d80e3e04aeb910c8906a8df81f0fe3
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416646"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97318273"
 ---
 # <a name="c28103"></a>C28103
 
@@ -38,4 +39,4 @@ if (NT_SUCCESS(res))
 }
 ```
 
-Se questo avviso viene segnalato come falso positivo, la causa più probabile è che la funzione che rilascia la risorsa non sia annotata con `__drv_releasesResource` o `__drv_releasesResourceGlobal`. Si noti che se si utilizzano funzioni wrapper per le funzioni di sistema, le funzioni wrapper devono utilizzare le stesse annotazioni eseguite dalle funzioni di sistema. Attualmente, molte funzioni di sistema sono annotate nel file del modello, pertanto le annotazioni non sono visibili nei file di intestazione.
+Se questo avviso viene segnalato come falso positivo, la causa più probabile è che la funzione che rilascia la risorsa non sia annotata con `__drv_releasesResource` o `__drv_releasesResourceGlobal` . Si noti che se si utilizzano funzioni wrapper per le funzioni di sistema, le funzioni wrapper devono utilizzare le stesse annotazioni eseguite dalle funzioni di sistema. Attualmente, molte funzioni di sistema sono annotate nel file del modello, pertanto le annotazioni non sono visibili nei file di intestazione.
