--- a/docs/code-quality/c6263.md
+++ b/docs/code-quality/c6263.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6263'
 title: C6263
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6263
 ms.assetid: bc360ad7-5f59-4480-a642-6c7e6beeb5f6
-ms.openlocfilehash: 8002a7da096c104f8c232b3b2f1d7ab55313a594
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+ms.openlocfilehash: e9b78a139083c996b14b40c039cb17bf16965c41
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91498889"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97254066"
 ---
 # <a name="c6263"></a>C6263
 
@@ -78,7 +79,7 @@ void f ( int size )
 }
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 - [malloc](../c-runtime-library/reference/malloc.md)
 - [_alloca](../c-runtime-library/reference/alloca.md)
