commit translated contents

--- a/docs/code-quality/c26429.md
+++ b/docs/code-quality/c26429.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26429 USE_NOTNULL'
 title: C26429
 ms.date: 11/15/2017
 ms.topic: conceptual
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26429
 ms.assetid: 4e1c74d5-7307-436c-927b-f74ae863282c
-ms.openlocfilehash: 86fb5c6c2d11819ae502a856eafede63a9b02672
-ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
+ms.openlocfilehash: 3107ccbcfdc61b608a38b08c39f33a5bd464378e
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/25/2020
-ms.locfileid: "88843859"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97229626"
 ---
 # <a name="c26429-use_notnull"></a>USE_NOTNULL C26429
 
@@ -22,7 +23,7 @@ ms.locfileid: "88843859"
 
 È prassi comune usare le asserzioni per applicare presupposti sulla validità dei valori di puntatore. Il problema con le asserzioni consiste nel fatto che non espongono presupposti tramite l'interfaccia (ad esempio in tipi restituiti o parametri). Anche le asserzioni sono più difficili da gestire e mantenere sincronizzate con altre modifiche al codice. Si consiglia di usare GSL:: not_null dalla libreria di supporto delle linee guida come marcatore di risorse che non devono mai avere un valore null. La regola USE_NOTNULL consente di identificare le posizioni che omettono i controlli per verificare la presenza di valori null e quindi possono essere aggiornati per l'uso di GSL:: not_null.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 - Per la logica della regola è necessario il codice per dereferenziare una variabile puntatore, in modo che sia giustificato il controllo del valore null (o l'imposizione di un valore non null). Quindi, l'avviso viene generato solo se i puntatori vengono dereferenziati e non vengono mai testati per il null.
   - L'implementazione corrente gestisce solo puntatori semplici (o i relativi alias) e non rileva i puntatori intelligenti anche se GSL:: not_null può essere applicato anche ai puntatori intelligenti.
