--- a/docs/code-quality/c26426.md
+++ b/docs/code-quality/c26426.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26426 NO_GLOBAL_INIT_CALLS'
 title: C26426
 ms.date: 11/15/2017
 ms.topic: conceptual
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C26426
 ms.assetid: 6fb5f6d2-b097-47f8-8b49-f2fd4e9bef0e
-ms.openlocfilehash: 58725fd22d0178c0d4a5ae9758d3cc87f8989173
-ms.sourcegitcommit: c1fd917a8c06c6504f66f66315ff352d0c046700
+ms.openlocfilehash: eab2da06af5ecba4418439d6c03fe9af891e71d9
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/16/2020
-ms.locfileid: "90685153"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97229639"
 ---
 # <a name="c26426-no_global_init_calls"></a>NO_GLOBAL_INIT_CALLS C26426
 
@@ -22,7 +23,7 @@ ms.locfileid: "90685153"
 
 L'ordine di esecuzione degli inizializzatori per gli oggetti globali può essere incoerente o non definito. Questo può causare problemi difficili da riprodurre ed esaminare. Per evitare tali problemi, gli inizializzatori globali non devono dipendere da codice esterno eseguito in fase di esecuzione e possono potenzialmente dipendere da dati non ancora inizializzati. Questa regola contrassegna i casi in cui gli oggetti globali chiamano funzioni per ottenere i valori iniziali.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 - La regola ignora le chiamate alle funzioni constExpr o alle funzioni intrinseche presumendo che vengano calcolate in fase di compilazione o garantiscano l'esecuzione prevedibile in fase di esecuzione.
 
@@ -32,7 +33,7 @@ L'ordine di esecuzione degli inizializzatori per gli oggetti globali può essere
 
 - I membri statici della classe sono considerati globali, quindi vengono controllati anche gli inizializzatori.
 
-## <a name="examples"></a>Esempi
+## <a name="examples"></a>Esempio
 
 controllo della versione esterno
 
