commit translated contents

--- a/docs/code-quality/c28195.md
+++ b/docs/code-quality/c28195.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28195'
 title: C28195
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28195
 ms.assetid: 89524043-215e-4932-8079-ca2084d32963
-ms.openlocfilehash: c46f51bd7bfbb19e565169f6f99fe0673008a6c0
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: b070aaf09721f33e2540e2f3eab1b7594163c6d8
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416527"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97239922"
 ---
 # <a name="c28195"></a>C28195
 
 > avviso C28195: La funzione è stata dichiarata come acquisizione di memoria in una variabile ma è stata chiusa senza effettuare questa operazione
 
-Questo avviso indica che il prototipo di funzione per la funzione analizzata dispone di un'annotazione `__drv_acquiresMemory`. L'annotazione `__drv_acquiresMemory` indica che la funzione acquisisce memoria nella posizione del risultato designata, ma in almeno un percorso, la funzione non ha acquisito la memoria. Si noti che lo strumento di analisi del codice non riconosce l'implementazione effettiva di un allocatore di memoria (che implica l'aritmetica degli indirizzi) e non riconosce che la memoria è allocata (anche se verranno riconosciuti molti wrapper). In questo caso, lo strumento di analisi del codice non riconosce che la memoria è stata allocata e genera questo avviso. Per evitare il falso positivo, usare un avviso `#pragma` sulla riga che precede la parentesi graffa di apertura `{` del corpo della funzione
+Questo avviso indica che il prototipo di funzione per la funzione analizzata ha un' `__drv_acquiresMemory` annotazione. L' `__drv_acquiresMemory` annotazione indica che la funzione acquisisce memoria nella posizione del risultato designata, ma in almeno un percorso, la funzione non ha acquisito la memoria. Si noti che lo strumento di analisi del codice non riconosce l'implementazione effettiva di un allocatore di memoria (che implica l'aritmetica degli indirizzi) e non riconosce che la memoria è allocata (anche se verranno riconosciuti molti wrapper). In questo caso, lo strumento di analisi del codice non riconosce che la memoria è stata allocata e genera questo avviso. Per escludere il falso positivo, usare un `#pragma` avviso sulla riga che precede la parentesi graffa di apertura `{` del corpo della funzione
