--- a/docs/code-quality/c28203.md
+++ b/docs/code-quality/c28203.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28203'
 title: C28203
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28203
 ms.assetid: 20b98be6-0fc2-4712-9090-41201d80155e
-ms.openlocfilehash: a9fa361d86ca3869a22c797a030b3a9c6661542a
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 9167e650565e5b1c99d4ea5a7498844f15183f53
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416450"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97239883"
 ---
 # <a name="c28203"></a>C28203
 
-> avviso C28203: riferimento ambiguo al membro della classe. Potrebbe essere \<> name1 o \<name2 >
+> avviso C28203: riferimento ambiguo al membro della classe. Potrebbe essere \<name1> o \<name2>
 
 Questo avviso viene segnalato quando si verifica un errore nelle annotazioni.
