--- a/docs/code-quality/c6704.md
+++ b/docs/code-quality/c6704.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6704'
 title: C6704
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C6704
 ms.assetid: fc25543d-746e-415e-b0a8-d5134461af41
-ms.openlocfilehash: 4eddd07c0261a1b3a4721ccdc2d5da5e6937cd5a
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 0d6fbdec893c122d44fd0ec4004c0df9dc6f7e4a
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418970"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97252636"
 ---
 # <a name="c6704"></a>C6704
 
-> avviso C6704: errore imprevisto dell'espressione di annotazione: \<annotazione > [\<perché >]
+> avviso C6704: errore imprevisto dell'espressione di annotazione: \<annotation> [ \<why> ]
 
 Questo avviso viene segnalato quando si verifica un errore nelle annotazioni.
