--- a/docs/code-quality/c6706.md
+++ b/docs/code-quality/c6706.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6706'
 title: C6706
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C6706
 ms.assetid: 20f3fd01-4993-4f7f-bd3f-57706356cf1d
-ms.openlocfilehash: 1f358d877efee9ff4d43ca9dd9a05f603f82fa48
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: d5ca258ac3e50dbbd193e25d95c3c1c81ed98d26
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418942"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97252610"
 ---
 # <a name="c6706"></a>C6706
 
-> avviso C6706: errore di annotazione imprevisto per l'annotazione \<annotation >: \<perché >
+> avviso C6706: errore di annotazione imprevisto per l'annotazione \<annotation> : \<why>
 
 Questo avviso viene segnalato quando si verifica un errore nelle annotazioni.
