commit translated contents

--- a/docs/code-quality/c26403.md
+++ b/docs/code-quality/c26403.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26403 RESET_OR_DELETE_OWNER'
 title: C26403
 ms.date: 07/21/2017
 ms.topic: conceptual
@@ -7,24 +8,24 @@ f1_keywords:
 helpviewer_keywords:
 - C26403
 ms.assetid: 7e14868d-df86-4df3-98d3-71b1e80ba14e
-ms.openlocfilehash: f9d712cf15f4e264eaf408f187dc4636afa574d5
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: cbcf8bdf816c0f3502862efc16746ab4afe54579
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418424"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97256250"
 ---
-# <a name="c26403-reset_or_delete_owner"></a>RESET_OR_DELETE_OWNER C26403
+# <a name="c26403-reset_or_delete_owner"></a>C26403 RESET_OR_DELETE_OWNER
 
 I puntatori del proprietario sono come i puntatori univoci: sono proprietari di una risorsa esclusivamente e gestiscono il rilascio della risorsa, oltre ai relativi trasferimenti ad altri proprietari. Questo controllo verifica che un puntatore proprietario locale mantenga correttamente la propria risorsa tramite tutti i percorsi di esecuzione in una funzione. Se la risorsa non è stata trasferita a un altro proprietario o non è stata rilasciata in modo esplicito, il controllo avverte e punta alla dichiarazione della variabile puntatore.
 
-Per ulteriori informazioni, vedere le [ C++ linee guida di base](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r-resource-management).
+Per ulteriori informazioni, vedere la [linee guida di base di C++](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r-resource-management).
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 - Attualmente questo controllo non fornisce il percorso esatto che non riesce a rilasciare la risorsa. Questo comportamento può essere migliorato nelle versioni future. Potrebbe essere difficile trovare la posizione esatta per una correzione. L'approccio migliore consiste nel provare a sostituire i puntatori semplici in funzioni complesse con puntatori univoci per evitare eventuali rischi.
 
-- Il controllo può rimuovere una funzione eccessivamente complessa per non bloccare l'analisi del codice. In genere, la complessità delle funzioni deve essere mantenuta con una soglia ragionevole. È possibile considerare l'aggiunta di un controllo di complessità C++ locale al modulo delle linee guida di base se è presente una richiesta chiara. Questa limitazione è applicabile ad altre regole sensibili al flusso di dati.
+- Il controllo può rimuovere una funzione eccessivamente complessa per non bloccare l'analisi del codice. In genere, la complessità delle funzioni deve essere mantenuta con una soglia ragionevole. È possibile considerare l'aggiunta di un controllo di complessità locale al modulo Linee guida di base di C++ se è presente una richiesta chiara. Questa limitazione è applicabile ad altre regole sensibili al flusso di dati.
 
 - L'avviso può essere attivato in caso di falsi positivi evidenti in cui la memoria viene eliminata solo dopo il controllo nullo di un puntatore. Questo è il risultato di una limitazione corrente dell'API dello strumento, ma potrebbe essere migliorato in futuro.
 
