--- a/docs/code-quality/c26406.md
+++ b/docs/code-quality/c26406.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26406 DONT_ASSIGN_RAW_TO_OWNER'
 title: C26406
 ms.date: 08/18/2020
 ms.topic: conceptual
@@ -7,18 +8,18 @@ f1_keywords:
 helpviewer_keywords:
 - C26406
 ms.assetid: 02fb8e23-1989-4e24-a5a5-e30f71d00325
-ms.openlocfilehash: ea39811b657b08a33639ccd86b704a91792934be
-ms.sourcegitcommit: 65fead53d56d531d71be42216056aca5f44def11
+ms.openlocfilehash: 746418297ab61a1c04188ad0a27d9d5c371bbbb0
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/19/2020
-ms.locfileid: "88610881"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97256133"
 ---
 # <a name="c26406--dont_assign_raw_to_owner"></a>DONT_ASSIGN_RAW_TO_OWNER C26406
 
 Questo avviso impone R. 3 dal Linee guida di base di C++. Per ulteriori informazioni, vedere [linee guida di base di C++ R. 3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r3-a-raw-pointer-a-t-is-non-owning).
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 I proprietari vengono inizializzati dalle allocazioni o da altri proprietari. Questo avviso viene visualizzato quando si assegna un valore da un puntatore non elaborato a un puntatore proprietario. I puntatori non elaborati non garantiscono il trasferimento della proprietà; il proprietario originale può comunque mantenere la risorsa e tentare di rilasciarla. È bene assegnare un valore da un proprietario a un puntatore non elaborato. I puntatori non elaborati sono client validi per accedere alle risorse, ma non per gestirli.
 
