--- a/docs/code-quality/c26812.md
+++ b/docs/code-quality/c26812.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26812'
 title: c26812
 keywords: c26812
 author: JordanMaples
@@ -11,12 +12,12 @@ helpviewer_keywords:
 - C26812
 dev_langs:
 - C++
-ms.openlocfilehash: 01c171c7a9e621cdaa6fc0dab88620839827094f
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 82eddaaca0c9d4a823a973d68452af24ece3ac5c
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416723"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97254183"
 ---
 # <a name="c26812"></a>C26812
 
@@ -26,7 +27,7 @@ Il tipo del tipo enum è *senza* ambito. Preferisce ' enum class ' su' enum ' (e
 
 ## <a name="example"></a>Esempio
 
-L'esempio seguente è relativo alle C++ linee guida principali
+L'esempio seguente è dalla Linee guida di base di C++
 
 ```cpp
 void Print_color(int color);
@@ -54,6 +55,6 @@ Print_color(webby);  // Error: cannot convert Web_color to int.
 Print_color(Product_info::Red);  // Error: cannot convert Product_info to int.
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 [Enum. 3 preferisce la classe enum su enum](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#enum3-prefer-class-enums-over-plain-enums )
