--- a/docs/code-quality/c26815.md
+++ b/docs/code-quality/c26815.md
@@ -1,6 +1,7 @@
 ---
-title: c26815 (in inglese)
-keywords: c26815 (in inglese)
+description: "Altre informazioni su: avviso C26815 il puntatore è in sospeso perché punta a un'istanza temporanea distrutta. (ES. 65)"
+title: c26815
+keywords: c26815
 author: Rastaban
 ms.author: philc
 ms.date: 01/27/2020
@@ -11,16 +12,16 @@ helpviewer_keywords:
 - C26815
 dev_langs:
 - C++
-ms.openlocfilehash: f8b2a0bd99854ef6b5f604aee4acbfa078bc72c5
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: daf4cd54260a544bd3542fc242b4da303cf2e78b
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81332042"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97254222"
 ---
-# <a name="warning-c26815-the-pointer-is-dangling-because-it-points-at-a-temporary-instance-that-was-destroyed-es65"></a>Avviso C26815 Il puntatore è penzoloni perché punta a un'istanza temporanea che è stata eliminata. (ES.65)
+# <a name="warning-c26815-the-pointer-is-dangling-because-it-points-at-a-temporary-instance-that-was-destroyed-es65"></a>Avviso C26815 il puntatore è in sospeso perché punta a un'istanza temporanea distrutta. (ES. 65)
 
-C'è un puntatore penzoloni che è il risultato di un temporaneo senza nome che è stato eliminato.
+È presente un puntatore a penzoloni che è il risultato di un oggetto temporaneo senza nome che è stato eliminato definitivamente.
 
 ## <a name="example"></a>Esempio
 
@@ -64,6 +65,6 @@ void views()
 }
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
-[ES.65: Non dereferenziare un puntatore non valido](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-deref)
+[ES. 65: non dereferenziare un puntatore non valido](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-deref)
