--- a/docs/code-quality/c26816.md
+++ b/docs/code-quality/c26816.md
@@ -1,6 +1,7 @@
 ---
-title: c26816 (informazioni in inglese)
-keywords: c26816 (informazioni in inglese)
+description: 'Altre informazioni su: avviso C26816 il puntatore punta alla memoria allocata nello stack (ES. 65)'
+title: c26816
+keywords: c26816
 author: Rastaban
 ms.author: philc
 ms.date: 01/27/2020
@@ -11,16 +12,16 @@ helpviewer_keywords:
 - C26816
 dev_langs:
 - C++
-ms.openlocfilehash: 9eeefd76191e05e9f6ec46a7b8c1af003724973c
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: 114617ef86523861ca03af6ee126ac5f31964277
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81332018"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97254209"
 ---
-# <a name="warning-c26816-the-pointer-points-to-memory-allocated-on-the-stack-es65"></a>Avviso C26816 il puntatore punta alla memoria allocata nello stack (ES.65)
+# <a name="warning-c26816-the-pointer-points-to-memory-allocated-on-the-stack-es65"></a>Avviso C26816 il puntatore punta alla memoria allocata nello stack (ES. 65)
 
-Il puntatore punta a una variabile allocata nello stack.  Quando la variabile esce dall'ambito viene pulita, il che causa l'invalido del puntatore.
+Il puntatore punta a una variabile allocata nello stack.  Quando la variabile esce dall'ambito, viene pulita, il che fa sì che il puntatore non sia valido.
 
 ## <a name="example"></a>Esempio
 
@@ -36,7 +37,7 @@ const char *danglingRawPtrFromLocal() {
 }
 ```
 
-La correzione consiste nell'estendere la durata del valore utilizzato.  In questo esempio viene risolto l'avviso restituendo il codice std::string.
+La correzione consiste nell'estendere la durata del valore utilizzato.  In questo esempio, l'avviso viene indirizzato restituendo std:: String.
 Può anche essere risolto copiando i dati nell'heap o aggiungendo una variabile "out" all'elenco dei parametri della funzione.
 
 ```cpp
@@ -49,6 +50,6 @@ std::string danglingRawPtrFromLocal() {
 }
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
-[ES.65: Non dereferenziare un puntatore non valido](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-deref)
+[ES. 65: non dereferenziare un puntatore non valido](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Res-deref)
