--- a/docs/code-quality/c6053.md
+++ b/docs/code-quality/c6053.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6053'
 title: C6053
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6053
 ms.assetid: 8e25566a-e3b9-470a-820d-64221a877c53
-ms.openlocfilehash: f1b13d1a049d1a8820a3d15fd3cc769269fc182b
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+ms.openlocfilehash: 6abef614075a09259d7e08343de08e84b564242a
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91502056"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97255834"
 ---
 # <a name="c6053"></a>C6053
 
@@ -78,7 +79,7 @@ size_t f( )
 
 Si noti che questo avviso viene a volte segnalato su determinati idiomi garantiti come sicuri. A causa della frequenza e delle conseguenze potenziali di questo difetto, lo strumento di analisi è distorto per individuare i potenziali problemi anziché la distorsione tipica della riduzione del rumore.
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 - [Uso delle annotazioni SAL per ridurre i difetti del codice](using-sal-annotations-to-reduce-c-cpp-code-defects.md)
 - [strncpy_s, _strncpy_s_l, wcsncpy_s, _wcsncpy_s_l, _mbsncpy_s, _mbsncpy_s_l](../c-runtime-library/reference/strncpy-s-strncpy-s-l-wcsncpy-s-wcsncpy-s-l-mbsncpy-s-mbsncpy-s-l.md)
