--- a/docs/code-quality/c6059.md
+++ b/docs/code-quality/c6059.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6059'
 title: C6059
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6059
 ms.assetid: 343a4cd1-048a-4edf-bb4b-187097bb6093
-ms.openlocfilehash: ac94ae975906212c312158ac0e98058cfd686882
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+ms.openlocfilehash: b216fe5728e27ff3fd2208dc05222c8a66f49152
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91502033"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97255821"
 ---
 # <a name="c6059"></a>C6059
 
@@ -81,7 +82,7 @@ void f( )
 }
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 - [strncpy_s, _strncpy_s_l, wcsncpy_s, _wcsncpy_s_l, _mbsncpy_s, _mbsncpy_s_l](../c-runtime-library/reference/strncpy-s-strncpy-s-l-wcsncpy-s-wcsncpy-s-l-mbsncpy-s-mbsncpy-s-l.md)
 - [strncat_s, _strncat_s_l, wcsncat_s, _wcsncat_s_l, _mbsncat_s, _mbsncat_s_l](../c-runtime-library/reference/strncat-s-strncat-s-l-wcsncat-s-wcsncat-s-l-mbsncat-s-mbsncat-s-l.md)
