--- a/docs/code-quality/c6510.md
+++ b/docs/code-quality/c6510.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6510'
 title: C6510
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,18 +8,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6510
 ms.assetid: b7fc5eb4-3311-442c-ac79-401e88ef2129
-ms.openlocfilehash: 07d20339683601078e499b8db8f4de4febac9120
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: c3a8ce7f2a2587abef7d0da117cbc90a65304d69
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419215"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97255795"
 ---
 # <a name="c6510"></a>C6510
 
-> avviso C6510: annotazione non valida: la proprietà' NullTerminated ' può essere usata solo su buffer i cui elementi sono di tipo integrale o puntatore: funzione '\<Function >' \<parametro >.
+> avviso C6510: annotazione non valida: la proprietà' NullTerminated ' può essere usata solo nei buffer i cui elementi sono di tipo integrale o puntatore: funzione ' \<function> ' \<parameter> .
 
-Questo avviso indica un uso errato della proprietà **NullTerminated** (quelli che terminano con '`_z`'). Questo tipo di proprietà può essere utilizzato solo su tipi matrice o puntatore.
+Questo avviso indica un uso errato della proprietà **NullTerminated** (quelli che terminano con ' `_z` '). Questo tipo di proprietà può essere utilizzato solo su tipi matrice o puntatore.
 
 ## <a name="example"></a>Esempio
 
@@ -44,6 +45,6 @@ void f(_In_z_ char * x)
 }
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 [C6516](../code-quality/c6516.md)
