--- a/docs/code-quality/c6551.md
+++ b/docs/code-quality/c6551.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6551'
 title: C6551
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,16 +8,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6551
 ms.assetid: cfd02698-7ba7-4564-841d-208999b1561d
-ms.openlocfilehash: 09677c5c9393e6c7a9c5648348a369f9dce27e27
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 515ad80d7a123d653df2a3a0af16fb3f61ec5955
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419047"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97252805"
 ---
 # <a name="c6551"></a>C6551
 
 > avviso C6551: specifica di dimensione non valida: espressione non analizzabile
 
 > [!NOTE]
-> Questo avviso viene visualizzato solo nel codice che usa una versione deprecata del linguaggio di annotazione del codice sorgente (SAL). Si consiglia di eseguire il porting del codice per usare la versione più recente di SAL. Per ulteriori informazioni, vedere [utilizzo delle annotazioni SAL per ridurreC++ i difetti del codice C/](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
+> Questo avviso viene visualizzato solo nel codice che usa una versione deprecata del linguaggio di annotazione del codice sorgente (SAL). Si consiglia di eseguire il porting del codice per usare la versione più recente di SAL. Per ulteriori informazioni, vedere [utilizzo delle annotazioni SAL per ridurre i difetti del codice C/C++](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
