--- a/docs/code-quality/c6552.md
+++ b/docs/code-quality/c6552.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6552'
 title: C6552
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,16 +8,16 @@ f1_keywords:
 helpviewer_keywords:
 - C6552
 ms.assetid: 6c6f17d8-4ddd-4fad-b81f-e32285e7afa8
-ms.openlocfilehash: e8a5fde8636a2f7959bfe4aa77f86158b9048abe
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: c64723651e2488464706c7885d7e54c3c2dbc719
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419026"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97252779"
 ---
 # <a name="c6552"></a>C6552
 
-> avviso C6552: `Deref=` o `Notref=`non valido: espressione non analizzabile
+> avviso C6552: `Deref=` non valido o `Notref=` : espressione non analizzabile
 
 > [!NOTE]
-> Questo avviso viene visualizzato solo nel codice che usa una versione deprecata del linguaggio di annotazione del codice sorgente (SAL). Si consiglia di eseguire il porting del codice per usare la versione più recente di SAL. Per ulteriori informazioni, vedere [utilizzo delle annotazioni SAL per ridurreC++ i difetti del codice C/](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
+> Questo avviso viene visualizzato solo nel codice che usa una versione deprecata del linguaggio di annotazione del codice sorgente (SAL). Si consiglia di eseguire il porting del codice per usare la versione più recente di SAL. Per ulteriori informazioni, vedere [utilizzo delle annotazioni SAL per ridurre i difetti del codice C/C++](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
