--- a/docs/code-quality/c28246.md
+++ b/docs/code-quality/c28246.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28246'
 title: C28246
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28246
 ms.assetid: 66a297ab-19fc-4985-8738-0a92f8d1d5cc
-ms.openlocfilehash: 0e812a5ff97c96b77ace3c7cf6bc7a2b16d51e51
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 87f76be1ec6eada1d5830b7dc63f4273b4dacda0
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77421504"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97260449"
 ---
 # <a name="c28246"></a>C28246
 
-> avviso C28246: l'annotazione per la funzione '\<nome >'-parameter '\<parametro >' non corrisponde al tipo del parametro
+> avviso C28246: l'annotazione per la funzione ' \<name> '-parametro ' \<parameter> ' non corrisponde al tipo del parametro
 
 Un operatore __deref è stato applicato a un tipo non puntatore durante la creazione di un'annotazione.
