commit translated contents

--- a/docs/code-quality/c28309.md
+++ b/docs/code-quality/c28309.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28309'
 title: C28309
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28309
 ms.assetid: b3039b80-8623-42f5-8b46-6665e7ba7762
-ms.openlocfilehash: 12cd32b167eb07bc1c5a269bca51bf61ad019797
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 92d93732b7324121fa5428191b625dae3ed607fe
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77421021"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97292091"
 ---
 # <a name="c28309"></a>C28309
 
-> avviso C28309: < parameter_name >: gli operandi dell'annotazione devono essere di tipo integer/enum/Pointer. Gli operandi void e C++ gli operatori di overload non sono supportati. I valori float sono approssimati come numeri interi. Tipi: \<> di tipo.
+> avviso C28309: <parameter_name>: gli operandi dell'annotazione devono essere di tipo integer/enum/Pointer. Gli operandi void e gli operatori di overload C++ non sono supportati. I valori float sono approssimati come numeri interi. Tipi: \<typelist> .
 
-Si è provato a usare un void o una funzione in un'espressione di annotazione e l'analisi del codice non è in grado di gestirla.  Questo errore si verifica in genere quando si usa un `operator==` implementato come funzione, ma possono verificarsi anche altri casi. Esaminare i tipi in \<tipo > per individuare gli indizi sul problema.
+Si è provato a usare un void o una funzione in un'espressione di annotazione e l'analisi del codice non è in grado di gestirla.  Questo errore si verifica in genere quando `operator==` viene usato un implementato come funzione, ma possono verificarsi anche altri casi. Esaminare i tipi in \<typelist> per individuare eventuali problemi.
