--- a/docs/code-quality/c6501.md
+++ b/docs/code-quality/c6501.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: c6501'
 title: C6501
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,19 +8,19 @@ f1_keywords:
 helpviewer_keywords:
 - C6501
 ms.assetid: f9e8b847-2516-4bbb-bb1c-c87cfbacf254
-ms.openlocfilehash: 6636ff90a4bc7bcaabbf238e907544b47bc6ca4c
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 85528b66b44cb6068815c47914ed7570717b9365
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419327"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97292013"
 ---
 # <a name="c6501"></a>C6501
 
-> avviso c6501: conflitto di annotazione: \<nome > proprietà è in conflitto con la proprietà specificata in precedenza
+> avviso c6501: conflitto di annotazione: \<name> conflitti di proprietà con la proprietà specificata in precedenza
 
 > [!NOTE]
-> Questo avviso viene visualizzato solo nel codice che usa una versione deprecata del linguaggio di annotazione del codice sorgente (SAL). Si consiglia di eseguire il porting del codice per usare la versione più recente di SAL. Per ulteriori informazioni, vedere [utilizzo delle annotazioni SAL per ridurreC++ i difetti del codice C/](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
+> Questo avviso viene visualizzato solo nel codice che usa una versione deprecata del linguaggio di annotazione del codice sorgente (SAL). Si consiglia di eseguire il porting del codice per usare la versione più recente di SAL. Per ulteriori informazioni, vedere [utilizzo delle annotazioni SAL per ridurre i difetti del codice C/C++](../code-quality/using-sal-annotations-to-reduce-c-cpp-code-defects.md).
 
 Questo avviso indica la presenza di proprietà in conflitto nell'annotazione. Questa situazione si verifica in genere quando vengono utilizzate più proprietà che svolgono finalità simili per annotare un parametro o un valore restituito. Per correggere l'avviso, è necessario scegliere la proprietà che meglio soddisfa le proprie esigenze.
 
