commit translated contents

--- a/docs/code-quality/c6400.md
+++ b/docs/code-quality/c6400.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6400'
 title: C6400
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,22 +8,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6400
 ms.assetid: 35808969-1d43-41e8-bcda-33635637fb26
-ms.openlocfilehash: 6037cc1c58f9463a7ac4d558479dfcd0b94adc40
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: c5837e7973da41a3774a5bac8d5b945bbcbb6271
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419397"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97296108"
 ---
 # <a name="c6400"></a>C6400
 
-> avviso C6400: utilizzando \<nome della funzione > per eseguire un confronto senza distinzione tra maiuscole e minuscole con la stringa costante \<nome stringa >. Produce risultati imprevisti in impostazioni locali diverse dall'inglese
+> avviso C6400: utilizzo \<function name> di per eseguire un confronto senza distinzione tra maiuscole e minuscole con la stringa costante \<string name> . Produce risultati imprevisti in impostazioni locali diverse dall'inglese
 
 Questo avviso indica che un confronto senza distinzione tra maiuscole e minuscole in una stringa costante viene eseguito in modo dipendente dalle impostazioni locali, quando, apparentemente, era previsto un confronto indipendente dalle impostazioni locali.
 
 La conseguenza tipica di questo difetto è un comportamento errato nelle impostazioni locali non in lingua inglese. Ad esempio, in turco, ". gif" non corrisponderà a ". GIF "; in vietnamita, "LogIn" non corrisponderà a "LOGIN".
 
-I confronti tra stringhe devono essere in genere eseguiti con la funzione `CompareString`. Per eseguire un confronto indipendente dalle impostazioni locali in Windows XP, il primo parametro deve essere la costante `LOCALE_INVARIANT`.
+I confronti tra stringhe devono essere in genere eseguiti con la `CompareString` funzione. Per eseguire un confronto indipendente dalle impostazioni locali in Windows XP, il primo parametro deve essere la costante `LOCALE_INVARIANT` .
 
 ## <a name="example"></a>Esempio
 
