--- a/docs/cpp/m128.md
+++ b/docs/cpp/m128.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: __m128'
 title: __m128
 ms.date: 11/04/2016
 f1_keywords:
@@ -6,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - __m128 keyword [C++]
 ms.assetid: e51a472a-0e3c-4989-9a2a-36adb05273a3
-ms.openlocfilehash: 9568e1fa1e0bc2fffed5e9f33b0f99dfcb955551
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: 1db0572a013c3df667fbf29661b07ed5021e95d5
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87225956"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97299176"
 ---
 # <a name="__m128"></a>__m128
 
@@ -27,7 +28,7 @@ int main() {
 }
 ```
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 Non è consigliabile accedere **`__m128`** direttamente ai campi. È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **`__m128`** esegue il mapping ai registri XMM [0-7].
 
@@ -37,7 +38,7 @@ Il **`__m128`** tipo di dati non è supportato nei processori ARM.
 
 **TERMINA specifica Microsoft**
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 [Parole chiave](../cpp/keywords-cpp.md)<br/>
 [Tipi incorporati](../cpp/fundamental-types-cpp.md)<br/>
