--- a/docs/code-quality/c26435.md
+++ b/docs/code-quality/c26435.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C26435 SINGLE_VIRTUAL_SPECIFICATION'
 title: C26435
 keywords: C26435
 ms.date: 01/18/2017
@@ -9,33 +10,33 @@ helpviewer_keywords:
 - C26435
 dev_langs:
 - C++
-ms.openlocfilehash: 75c171aa41909a4df400f3b32b3baab531940af4
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: c59c734098530e55f8ec5210e1068146a5d28926
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81369571"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97305897"
 ---
-# <a name="c26435-single_virtual_specification"></a>C26435 SINGLE_VIRTUAL_SPECIFICATION
+# <a name="c26435-single_virtual_specification"></a>SINGLE_VIRTUAL_SPECIFICATION C26435
 
-"La funzione deve specificare esattamente uno dei parametri 'virtual', 'override' o 'final'."
+"La funzione deve specificare esattamente uno dei ' virtuali ',' override ' o ' final '".
 
-## <a name="c-core-guidelines"></a>Linee guida di base di C
+## <a name="c-core-guidelines"></a>Linee guida di base di C++
 
-[C.128: Le funzioni virtuali devono specificare esattamente uno dei file virtual, override o final](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md)
+[C. 128: le funzioni virtuali devono specificare esattamente uno dei caratteri virtuali, di sostituzione o finali](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md)
 
-Per migliorare la leggibilità, il tipo di comportamento virtuale deve essere dichiarato in modo chiaro e senza ridondanza non necessaria. Anche se più identificatori virtuali possono essere utilizzati contemporaneamente, è preferibile specificarne uno alla volta per sottolineare l'aspetto più importante del comportamento virtuale. È evidente il seguente ordine di importanza:
+Per migliorare la leggibilità, il tipo di comportamento virtuale deve essere dichiarato chiaramente e senza ridondanza superflua. Anche se è possibile usare contemporaneamente più identificatori virtuali, è preferibile specificarne uno alla volta per evidenziare l'aspetto più importante del comportamento virtuale. Il seguente ordine di importanza è evidente:
 
-- semplice funzione virtuale;
-- funzione virtuale che esegue in modo esplicito l'override della base;
-- funzione virtuale che esegue l'override della base e fornisce l'implementazione finale nella catena di ereditarietà corrente.
+- funzione virtuale semplice;
+- funzione virtuale che esegue l'override esplicito della relativa base;
+- funzione virtuale che esegue l'override della relativa base e fornisce l'implementazione finale nella catena di ereditarietà corrente.
 
 ## <a name="notes"></a>Note
 
-- Questa regola ignora i distruttori poiché hanno regole speciali per quanto riguarda la virtualità.
-- Gli avvisi vengono visualizzati nelle definizioni di funzione, non nelle dichiarazioni. Può essere fonte di confusione, poiché le definizioni non dispongono di identificatori virtuali, ma l'avviso è ancora appropriato.
+- Questa regola ignora i distruttori poiché hanno regole speciali relative alla virtualizzazione.
+- Gli avvisi vengono visualizzati nelle definizioni di funzione, non nelle dichiarazioni. Potrebbe creare confusione, poiché le definizioni non hanno identificatori virtuali, ma l'avviso è ancora appropriato.
 
-## <a name="example-redundant-specifier"></a>Esempio: identificatore ridondanteExample: Redundant specifier
+## <a name="example-redundant-specifier"></a>Esempio: identificatore ridondante
 
 ```cpp
 class Ellipse : public Shape {
@@ -53,6 +54,6 @@ public:
 };
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
-[C.128: Le funzioni virtuali devono specificare esattamente uno dei file virtual, override o final](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md)
+[C. 128: le funzioni virtuali devono specificare esattamente uno dei caratteri virtuali, di sostituzione o finali](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md)
