commit translated contents

--- a/docs/code-quality/c28039.md
+++ b/docs/code-quality/c28039.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28039'
 title: C28039
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,21 +8,21 @@ f1_keywords:
 helpviewer_keywords:
 - C28039
 ms.assetid: 36cd63fe-1f0a-4f1c-a40b-5d52e22f19b3
-ms.openlocfilehash: 5c9e0bcf9a7ac1f35e47913d603744ae9b7c880a
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 41ea2317f9c10d1c002d48fe5cbe0bcb459b3a3d
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417794"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97308929"
 ---
 # <a name="c28039"></a>C28039
 
-> avviso C28039: il tipo di parametro effettivo \<operando > deve corrispondere esattamente al tipo \<typeName >
+> avviso C28039: il tipo di parametro effettivo \<operand> deve corrispondere esattamente al tipo \<typename>
 
 Questo avviso viene in genere segnalato quando a un oggetto formale enum non è stato passato un membro dell'enumerazione, ma può essere usato anche per altri tipi.
 
 Poiché C consente di usare le enumerazioni in modo intercambiabile e interscambiabile con le costanti, è facile passare il valore enum errato a una funzione senza errori.
 
-Per i tipi enum, se il tipo di un parametro enum è annotato con `_Enum_is_bitflag_`, è consentita l'aritmetica sul parametro. In caso contrario, il tipo del parametro deve essere esatto. Se è strettamente richiesta una costante, è possibile che venga applicato anche l'avviso C28137.
+Per i tipi enum, se il tipo di un parametro enum è annotato con `_Enum_is_bitflag_` , l'aritmetica è consentita per il parametro. In caso contrario, il tipo del parametro deve essere esatto. Se è strettamente richiesta una costante, è possibile che venga applicato anche l'avviso C28137.
 
 Questa regola può essere usata anche per altri tipi di parametro. vedere la documentazione della funzione per i motivi per i quali i tipi devono corrispondere esattamente.
