--- a/docs/code-quality/c6315.md
+++ b/docs/code-quality/c6315.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6315'
 title: C6315
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,18 +8,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6315
 ms.assetid: 4bc932d5-04fd-440d-b3af-e32a8bbc0618
-ms.openlocfilehash: f1132af5dfac77d552c23af9508f964fe3e69a67
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 901c213b363eed2bdc09d68ea41c80c20d383308
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419782"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97308936"
 ---
 # <a name="c6315"></a>C6315
 
 > avviso C6315: ordine errato delle operazioni: l'operatore and bit per bit ha maggiore precedenza rispetto a OR bit per bit. Aggiungere le parentesi per chiarire lo scopo
 
-Questo avviso indica che un'espressione in un contesto di test contiene le operazioni and bit per bit (`&`) e OR bit per bit (`|`), ma genera una costante perché l'operazione OR bit per bit si verifica per ultimo. È necessario aggiungere le parentesi per chiarire lo scopo.
+Questo avviso indica che un'espressione in un contesto di test contiene le operazioni and bit per bit ( `&` ) e bit per bit ( `|` ), ma genera una costante perché l'operazione OR bit per bit si verifica per ultimo. È necessario aggiungere le parentesi per chiarire lo scopo.
 
 ## <a name="example"></a>Esempio
 
