--- a/docs/code-quality/c6316.md
+++ b/docs/code-quality/c6316.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6316'
 title: C6316
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,18 +8,18 @@ f1_keywords:
 helpviewer_keywords:
 - C6316
 ms.assetid: ddd6a928-76b1-4d1b-9a9d-af1efcf02e3a
-ms.openlocfilehash: 9402f9945d95822b75839b1c68f0dd16859bd062
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: b71b947fd130102d85b5dfad646e22ae4557ed77
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77419747"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97308952"
 ---
 # <a name="c6316"></a>C6316
 
 > avviso C6316: operatore errato: l'espressione testata è costante e diversa da zero. Utilizzare and bit per bit per determinare se i bit sono impostati
 
-Questo avviso indica l'utilizzo dell'operatore OR bit per bit (`|`) quando è necessario utilizzare and bit per bit (`&`). OR bit per bit consente di aggiungere bit all'espressione risultante, mentre bit per bit consente di selezionare solo i bit in comune tra i due operatori. I test per i flag devono essere eseguiti con and bit per bit o un test di uguaglianza.
+Questo avviso indica l'utilizzo dell'operatore OR bit per bit ( `|` ) quando è necessario utilizzare and bit per bit ( `&` ). OR bit per bit consente di aggiungere bit all'espressione risultante, mentre bit per bit consente di selezionare solo i bit in comune tra i due operatori. I test per i flag devono essere eseguiti con and bit per bit o un test di uguaglianza.
 
 ## <a name="example"></a>Esempio
 
