--- a/docs/code-quality/c28020.md
+++ b/docs/code-quality/c28020.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28020'
 title: C28020
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,17 +8,17 @@ f1_keywords:
 helpviewer_keywords:
 - C28020
 ms.assetid: 3612185a-0858-4ba9-b795-4a0681073cf7
-ms.openlocfilehash: af790bd19e37fb7b712105fa2c60604211bce2d6
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: a3e1cf991ec37d776e90124f20e68f723f247e30
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416709"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97309134"
 ---
 # <a name="c28020"></a>C28020
 
-> avviso C28020: l'espressione \<Expr > non è true in questa chiamata
+> avviso C28020: l'espressione \<expr> non è true in questa chiamata
 
-Questo avviso viene segnalato quando il \_soddisfa\_ espressione elencata non è true. Spesso indica un parametro errato.
+Questo avviso viene segnalato quando l' \_ espressione soddisfas \_ elencata non è true. Spesso indica un parametro errato.
 
 Se questa situazione si verifica in una dichiarazione di funzione, le annotazioni indicano una condizione non possibile.
