--- a/docs/code-quality/c28023.md
+++ b/docs/code-quality/c28023.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28023'
 title: C28023
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,17 +8,17 @@ f1_keywords:
 helpviewer_keywords:
 - C28023
 ms.assetid: c59986a8-8712-4d58-b415-ec08b4daf66f
-ms.openlocfilehash: 2d908c75899263494c53cec6dc9689f8e092cead
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 4c244611c3f17c19b330d88cebc20cd2e85f16c2
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417801"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97308978"
 ---
 # <a name="c28023"></a>C28023
 
-> avviso C28023: la funzione assegnata o passata deve avere un'annotazione `_Function_class_` per almeno una delle classi in: \<classe >
+> avviso C28023: la funzione assegnata o passata deve avere un' `_Function_class_` annotazione per almeno una delle classi in: \<classlist>
 
 Questo avviso viene in genere segnalato quando viene utilizzata una sola classe di funzioni e un callback del tipo appropriato non è dichiarato.
 
-Questo avviso viene generato quando la funzione sul lato sinistro dell'assegnazione (o dell'assegnazione implicita, se si tratta di una chiamata di funzione) viene annotata per indicare che si tratta di un tipo di funzione specifico del driver che utilizza l'annotazione `_Function_class_` o un typedef che contiene tale annotazione. La funzione sul lato destro dell'assegnazione non dispone di un'annotazione `_Function_class_`. La funzione a destra deve essere annotata in modo che sia dello stesso tipo della funzione a sinistra. Questa operazione è in genere ottimale aggiungendo la dichiarazione \<Class1 > \<funcname1 > prima della prima dichiarazione corrente di \<funcname2 >.
+Questo avviso viene generato quando la funzione sul lato sinistro dell'assegnazione (o dell'assegnazione implicita, se si tratta di una chiamata di funzione) viene annotata per indicare che si tratta di un tipo di funzione specifico del driver che utilizza l' `_Function_class_` annotazione o un typedef che contiene tale annotazione. La funzione sul lato destro dell'assegnazione non dispone di un' `_Function_class_` annotazione. La funzione a destra deve essere annotata in modo che sia dello stesso tipo della funzione a sinistra. Questa operazione viene in genere eseguita meglio aggiungendo la Dichiarazione \<class1> \<funcname1> prima della prima dichiarazione corrente di \<funcname2> .
