--- a/docs/code-quality/c28024.md
+++ b/docs/code-quality/c28024.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28024'
 title: C28024
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,17 +8,17 @@ f1_keywords:
 helpviewer_keywords:
 - C28024
 ms.assetid: b74fad50-0a2e-43d7-ba5e-e9432aa9f7c8
-ms.openlocfilehash: 039773f6ac204835919be3378363806d337d081e
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 01a9f6d77389c61fe30671f3ba16e5d1d8839f6e
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416653"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97308895"
 ---
 # <a name="c28024"></a>C28024
 
-> avviso C28024: il puntatore a funzione assegnato è annotato con la classe della funzione \<classe >, che non è contenuta nelle classi di funzioni \<classe >.
+> avviso C28024: il puntatore a funzione assegnato è annotato con la classe Function \<class> , che non è contenuta nelle classi di funzioni \<classlist> .
 
 Questo avviso viene segnalato quando entrambe le funzioni sono state annotate con una classe di funzione, ma le classi non corrispondono.
 
-Questo avviso viene generato quando un puntatore a funzione dispone di un'annotazione `_Function_class_` che specifica che devono essere assegnate solo le funzioni di una determinata classe funzionale. In un'assegnazione o in un'assegnazione implicita in una chiamata di funzione, l'origine e la destinazione devono essere della stessa classe della funzione, ma le classi di funzioni non corrispondono.
+Questo avviso viene generato quando un puntatore a funzione ha un' `_Function_class_` annotazione che specifica che devono essere assegnate solo le funzioni di una determinata classe funzionale. In un'assegnazione o in un'assegnazione implicita in una chiamata di funzione, l'origine e la destinazione devono essere della stessa classe della funzione, ma le classi di funzioni non corrispondono.
