--- a/docs/code-quality/c6320.md
+++ b/docs/code-quality/c6320.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C6320'
 title: C6320
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,12 +8,12 @@ f1_keywords:
 helpviewer_keywords:
 - C6320
 ms.assetid: fb9e568e-b3d4-4ce2-a276-a64ad74d7b1e
-ms.openlocfilehash: 6c5c67eb40ca3373b623dddbbb3cbfe1f21dc69c
-ms.sourcegitcommit: a1676bf6caae05ecd698f26ed80c08828722b237
+ms.openlocfilehash: e23764d4986309e86d370be962e2e70517dd6ec7
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/29/2020
-ms.locfileid: "91508749"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97332588"
 ---
 # <a name="c6320"></a>C6320
 
@@ -68,6 +69,6 @@ void f(int *p)
 }
 ```
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
 [Istruzione try-except](../cpp/try-except-statement.md)
