commit translated contents

--- a/docs/code-quality/c28220.md
+++ b/docs/code-quality/c28220.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28220'
 title: C28220
 ms.date: 12/17/2019
 ms.topic: reference
@@ -7,16 +8,16 @@ f1_keywords:
 helpviewer_keywords:
 - C28220
 ms.assetid: 64ff46fe-7ce7-491a-b0bb-484500b0267a
-ms.openlocfilehash: 4573631e5bb6e5813b8164ab4dc5e2e31dbc4825
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: f537cee33d35c944250546c88b25c3935bddfaee
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77421840"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97336364"
 ---
 # <a name="c28220"></a>C28220
 
-> avviso C28220: espressione Integer prevista per l'annotazione '\<Annotation\>'
+> avviso C28220: espressione Integer prevista per l'annotazione ' \<annotation\> '
 
 Questo avviso indica che è prevista un'espressione Integer come parametro di annotazione, ma in alternativa è stato usato un tipo incompatibile. Questa situazione può essere causata dal tentativo di usare una macro di annotazione SAL che non rientra nello scenario corrente.
 
@@ -35,9 +36,9 @@ void f(_In_reads_(last) const int *buffer, const int *last)
 }
 ```
 
-In questo esempio lo scopo dello sviluppatore era indicare che `buffer` verrebbe letto fino all'elemento `last`.  L'annotazione `_In_reads_` non corregge lo scenario perché viene utilizzata per indicare una dimensione del buffer nel numero di elementi. L'annotazione corretta è `_In_reads_to_ptr_`, che indica la fine del buffer con un puntatore.
+In questo esempio lo scopo dello sviluppatore era indicare che `buffer` verrebbe letto fino all' `last` elemento.  L' `_In_reads_` annotazione non corregge lo scenario perché viene utilizzata per indicare una dimensione del buffer nel numero di elementi. L'annotazione corretta è `_In_reads_to_ptr_` , che indica la fine del buffer con un puntatore.
 
-Se non sono presenti `_to_ptr_` equivalenti all'annotazione utilizzata, è possibile che l'avviso sia stato risolto convertendo il puntatore `last` in un valore di dimensione con `(buffer - size)` nell'annotazione.
+Se non è presente alcun `_to_ptr_` equivalente all'annotazione utilizzata, è possibile che l'avviso sia stato risolto convertendo il `last` puntatore in un valore di dimensione con `(buffer - size)` nell'annotazione.
 
 ```cpp
 #include <sal.h>
