--- a/docs/code-quality/c28222.md
+++ b/docs/code-quality/c28222.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28222'
 title: C28222
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28222
 ms.assetid: 28c21fab-ffa4-4153-8145-a2da2cb8fbe8
-ms.openlocfilehash: ee52a8f2791cd135b34de73f5f4478eab964573d
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 4f469952ee53e5bfe5599b5ee0e0d595d811787f
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77421833"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97336351"
 ---
 # <a name="c28222"></a>C28222
 
-> avviso C28222: \_sì\_, non \_alcun\_o \_probabilmente\_ prevista per l'annotazione
+> avviso C28222: \_ Sì \_ , \_ No \_ o \_ probabilmente \_ previsto per l'annotazione
 
-Questo avviso indica che un parametro di un'annotazione deve essere uno dei simboli `_Yes_`, `_No_`o `_Maybe_`ed è stato rilevato un altro simbolo. Questo indica in genere una macro di annotazione codificata in modo errato.
+Questo avviso indica che un parametro di un'annotazione deve essere uno dei simboli `_Yes_` , `_No_` o e che `_Maybe_` è stato rilevato un altro simbolo. Questo indica in genere una macro di annotazione codificata in modo errato.
