--- a/docs/code-quality/c28223.md
+++ b/docs/code-quality/c28223.md
@@ -1,4 +1,5 @@
 ---
+description: 'Altre informazioni su: C28223'
 title: C28223
 ms.date: 11/04/2016
 ms.topic: reference
@@ -7,15 +8,15 @@ f1_keywords:
 helpviewer_keywords:
 - C28223
 ms.assetid: 4c1a2421-5846-46bb-bc39-5aa38e3760a5
-ms.openlocfilehash: 8f84e1aa9f2d18837b0d78c8e1c9ef79a67590e5
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 36ec6adbba42e5fe567e9555ba32accff3bcf6c1
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77421812"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97336343"
 ---
 # <a name="c28223"></a>C28223
 
-> Avviso C28223: non è stato trovato il token/identificatore previsto per l'annotazione, parametro
+> avviso C28223: non è stato trovato il token/identificatore previsto per l'annotazione, parametro
 
-Questo avviso indica che un parametro di un'annotazione è previsto come identificatore e che è stato rilevato un altro simbolo. Questo indica in genere una macro di annotazione codificata in modo errato. L'utilizzo di C o C++ parole chiave in questa posizione causerà questo errore.
+Questo avviso indica che un parametro di un'annotazione è previsto come identificatore e che è stato rilevato un altro simbolo. Questo indica in genere una macro di annotazione codificata in modo errato. L'uso di parole chiave C o C++ in questa posizione causerà questo errore.
