commit translated contents

--- a/docs/assembler/masm/dot-686.md
+++ b/docs/assembler/masm/dot-686.md
@@ -1,17 +1,18 @@
 ---
-title: .686
+description: Ulteriori informazioni su:. 686 (MASM a 32 bit)
+title: ".686"
 ms.date: 11/05/2019
 f1_keywords:
-- .686
+- ".686"
 helpviewer_keywords:
 - .686 directive
 ms.assetid: 58aa0688-8eb9-4456-8f91-9ff7ea744fe2
-ms.openlocfilehash: d30ce3ca3f4cf6b875c81b04382732ccaee1734c
-ms.sourcegitcommit: 0781c69b22797c41630601a176b9ea541be4f2a3
+ms.openlocfilehash: 30a1adc5c4e22a08eefbb380cfd207f5206f5a13
+ms.sourcegitcommit: d6af41e42699628c3e2e6063ec7b03931a49a098
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 12/20/2019
-ms.locfileid: "75314237"
+ms.lasthandoff: 12/11/2020
+ms.locfileid: "97132379"
 ---
 # <a name="686-32-bit-masm"></a>.686 (MASM a 32 bit)
 
@@ -21,7 +22,7 @@ Consente l'assembly di istruzioni senza privilegi per il processore Pentium Pro.
 
 > **.686**
 
-## <a name="see-also"></a>Vedere anche
+## <a name="see-also"></a>Vedi anche
 
-[Riferimento alle direttive](directives-reference.md)\
+[Guida di riferimento alle direttive](directives-reference.md)\
 [Grammatica BNF di MASM](masm-bnf-grammar.md)
